@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+==04/24/2010==
+gaeorn: possible fix for long standing reconnect to login server problem if login server connection is down for an extended period of time.
+
 ==04/23/2010==
 cavedude: Added Drakking to faction_list, updated wolf form and Skeleton.
 
